# Enso

./: .env.example  .gitignore  .tool-versions  ABOUT.md  CLAUDE.md  COMPLETION_SUMMARY.md  DEMO.md  DEMO_SCRIPT.md  INTEGRATION.md  Makefile  README.md  Tiltfile  bootstrap.sh  enso-design-research.md  pyproject.toml  requirements.txt  run-backend.ps1  run-test-intake.ps1  run.ps1  run.sh  test_e2e.ps1  todo.md  verify_intake_flow.sh
.devcontainer/: devcontainer.json
.hooks/: pre-commit
backend/: .env.example  test_miro.py
backend/scripts/: setup_elevenlabs_agent.py
backend/src/: config.py  db.py  demo_intake.py  main.py
backend/src/agents/: scraper.py  voice_intake.py
backend/src/demo/: __init__.py  fixtures.py
backend/src/furniture_placement/: README.md  __init__.py  coord_convert.py  grid_types.py  (+9 more)
frontend/designer-next/: .env.local.example  biome.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
ikea-service/: .env.example  Dockerfile  README.md  demo.py  docker-compose.yml  pytest.ini  requirements.txt  test_api.py
ikea-service/app/: ikea_client.py  main.py  models.py  pipeline.py  storage.py  vector_db.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260220000000_initial.sql  20260220000001_room_glb.sql  20260220000002_miro_board_url.sql  20260220000003_storage_policies.sql  20260222000000_gurobi_columns.sql  20260222000001_demo_selected.sql
video/: package-lock.json  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
video/public/: .gitignore
video/src/: EnsoPromo.tsx  Root.tsx  beat-map.ts
(+97 files in other folders)
